--- a/plans.html
+++ b/plans.html
@@ -161,14 +161,14 @@
       <div id="trackBlock" class="checks" style="margin-top:6px;"></div>
       <div id="badgesBlock" style="margin-top:8px;"></div>
       <div class="divider"></div>
-      <div id="todoBlock" class="hint">
-        <strong>TODO (coming next):</strong>
-        <ul>
-          <li>Load real (or mocked) plans for this route.</li>
-          <li>Score plans using your priorities (premium vs total cost vs access, etc.).</li>
-          <li>Show a comparison grid with ✅/❌ for each plan against your needs.</li>
-        </ul>
-      </div>
+<div id="todoBlock" class="hint">
+  <strong>How to use this page:</strong>
+  <ul>
+    <li>Use the “Recommended track” as a starting point (not a final decision).</li>
+    <li>Compare real plans on Healthcare.gov, your state marketplace, or Medicare.gov.</li>
+    <li>Check that your doctors, hospitals, and medications are covered before enrolling.</li>
+  </ul>
+</div>
       <div style="margin-top:12px;" class="toolbar">
         <button onclick="history.back()">← Edit my answers</button>
         <a href="questions.html"><button class="primary">Start over</button></a>
