--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
   footer{ padding:34px 0; color:var(--muted) }
   .footer-row{ display:flex; flex-wrap:wrap; gap:16px; align-items:center; justify-content:space-between }
 </style>
+
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XEV62MEYDB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XEV62MEYDB');
+</script>
 </head>
 <body>
 
