--- a/retirement.html
+++ b/retirement.html
@@ -118,6 +118,121 @@
   </style>
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+<title>StakxAI — Build Wealth Together</title>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+<style>
+  :root{
+    --bg:#f5f7fa;
+    --card:#ffffff;
+    --text:#0a0f2c;
+    --muted:#6b7280;
+    --stroke:#e5e9f2;
+    --soft:#f7f9ff;
+    --brand:#1a73e8;
+    --brand-700:#0f5ad2;
+    --success:#15803d;
+    --radius:18px;
+    --shadow:0 10px 30px rgba(2,6,23,0.07);
+    --content-w:1100px;
+    --pad-x:24px;
+  }
+  @media (prefers-color-scheme: dark){
+    :root{
+      --bg:#0b1220; --card:#0e172a; --text:#e7ecf6; --muted:#a5b1cc; --stroke:#1e293b; --soft:#0f1b33; --shadow:none;
+    }
+  }
+
+  *{ box-sizing:border-box }
+  html, body{ height:100% }
+  body{
+    margin:0;
+    font-family:"Inter", system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+    background:var(--bg); color:var(--text); -webkit-tap-highlight-color:transparent;
+    padding-top:64px;
+  }
+
+  .wrap{ max-width:var(--content-w); margin:0 auto; padding:0 var(--pad-x); }
+
+  /* Header */
+  .site-header{
+    position:fixed; inset-block-start:0; inset-inline:0;
+    background:rgba(255,255,255,.9);
+    border-bottom:1px solid var(--stroke);
+    backdrop-filter: blur(8px);
+    z-index:1000;
+  }
+  @media (prefers-color-scheme: dark){ .site-header{ background: rgba(10,15,28,.7); } }
+  .header-inner{ min-height:60px; display:flex; align-items:center; justify-content:space-between; }
+  .brand{ color:var(--text); text-decoration:none; font-weight:800; font-size:20px; letter-spacing:.2px }
+  .nav{ display:flex; gap:18px; align-items:center }
+  .nav a{ color:inherit; text-decoration:none; font-weight:600; font-size:14px }
+  .nav a:hover{ text-decoration:underline }
+  .nav-toggle{ display:none; border:0; background:none; font-size:26px; cursor:pointer }
+  @media (max-width:820px){
+    .nav-toggle{ display:block }
+    .nav{ display:none; position:absolute; right:var(--pad-x); top:60px; background:var(--card); border:1px solid var(--stroke); border-radius:12px; box-shadow:0 8px 24px rgba(2,6,23,.15); padding:12px }
+    .nav.open{ display:block }
+    .nav a{ display:block; padding:8px 10px }
+  }
+
+  /* Hero */
+  .hero{ padding:40px 0 18px }
+  .kicker{ font-weight:800; font-size:12px; letter-spacing:.12em; text-transform:uppercase; color:var(--brand); margin-bottom:10px }
+  .title{ font-size: clamp(28px, 4.5vw, 48px); line-height:1.08; margin:0 0 10px 0; font-weight:800 }
+  .sub{ color:var(--muted); font-size:15px; max-width:800px }
+  .strip{ display:flex; align-items:center; gap:10px; background:var(--soft); border:1px solid var(--stroke); border-radius:12px; padding:10px 12px; margin-top:14px; color:var(--muted); font-size:13px }
+
+  /* Sections */
+  .section{ padding:24px 0 }
+  .card{ background:var(--card); border:1px solid var(--stroke); border-radius:var(--radius); box-shadow:var(--shadow); padding:20px }
+  .muted{ color:var(--muted) }
+
+  /* Community preview */
+  .qa{ display:flex; flex-direction:column; gap:12px }
+  .qa-item{ padding:14px; border:1px dashed var(--stroke); border-radius:14px; background:linear-gradient(0deg, rgba(0,0,0,0.02), rgba(0,0,0,0.02)), var(--card) }
+
+  /* Feedback form */
+  .form-row{ display:grid; grid-template-columns:1fr; gap:12px }
+  label{ font-size:14px; font-weight:600 }
+  input[type=text], textarea{
+    width:100%; padding:12px 14px; border-radius:14px; border:1px solid var(--stroke); background:#fdfdfd; color:inherit; font-size:16px;
+  }
+  textarea{ min-height:110px; resize:vertical }
+  .btn{ background:var(--brand); color:#fff; border:0; padding:14px 18px; font-weight:800; border-radius:14px; cursor:pointer }
+  .btn:hover{ background:var(--brand-700) }
+
+  /* Modal */
+  .modal-backdrop{ position:fixed; inset:0; background:rgba(0,0,0,.35); display:none; align-items:center; justify-content:center; padding:20px; z-index:2000 }
+  .modal{ background:var(--card); border:1px solid var(--stroke); border-radius:16px; box-shadow:0 18px 60px rgba(2,6,23,.2); max-width:640px; width:100%; overflow:hidden }
+  .modal header { padding:16px 18px; border-bottom:1px solid var(--stroke); display:flex; align-items:center; justify-content:space-between }
+  .modal .content{ padding:18px }
+  .close{ background:none; border:0; font-size:22px; cursor:pointer; color:var(--muted) }
+
+  /* Footer */
+  footer{ padding:34px 0; color:var(--muted) }
+  .footer-row{ display:flex; flex-wrap:wrap; gap:16px; align-items:center; justify-content:space-between }
+</style>
+
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XEV62MEYDB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XEV62MEYDB');
+</script>
+</head>
+<body>
+  
 </head>
 <body>
 
