--- a/questions.html
+++ b/questions.html
@@ -85,7 +85,18 @@
     .badge.ok{ background:#ecfdf5; color:var(--ok); border:1px solid #bbf7d0; }
     .badge.warn{ background:#fff7ed; color:#b45309; border:1px solid #fde68a; }
   </style>
-<!DOCTYPE html>
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XEV62MEYDB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XEV62MEYDB');
+  </script>
+</head>
+<body>
+
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
@@ -225,6 +236,21 @@
     </div>
   </div>
 
+  <div class="stk-container" style="margin-top:16px;">
+    <div style="
+      background:#fff3cd;
+      border:1px solid #ffeeba;
+      padding:16px;
+      border-radius:12px;
+      font-size:14px;
+      color:#856404;
+    ">
+      <strong>🚧 Under Construction:</strong><br>
+      31 states share data in a unified manner, but 19 states do not share complete or compatible information. Some publish only limited plan details. We are working on building a comprehensive 50-state plan comparison tool. Thank you for your patience!
+    </div>
+  </div>
+
+  
   <!-- Wizard -->
   <div class="wizard" role="form" aria-labelledby="title">
     <div class="steps" aria-hidden="true">
