--- a/retirement.html
+++ b/retirement.html
@@ -258,7 +258,7 @@
   <div class="kicker">Rack your Stakx.</div>
   <div class="strip" role="status" aria-live="polite">
     <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 2a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2Zm1 15h-2v-6h2Zm0-8h-2V7h2Z"/></svg>
-    Free forever. No login required. No data is collected by us. Data lives on your broswer and deleted when you shut it down.
+    Free and private. No login required. No data collected. Data lives on your browser and is deleted when you shut it down.
   </div>
 </div>
 
